--- a/src/app/admin/features/cas_operaion/finger-print/finger-print.component.scss
+++ b/src/app/admin/features/cas_operaion/finger-print/finger-print.component.scss
@@ -91,7 +91,16 @@ input {
     display: flex;
 }
 
-
+.status-running {
+    color: green;
+    font-weight: bold;
+  }
+  
+  .status-stopped {
+    color: red;
+    font-weight: bold;
+  }
+  
   
 @media screen and (max-width:560px) {
     .main {
