--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -270,22 +270,22 @@
     <h3 style="color: rgb(255, 255, 255);">COUNT REPORTS</h3>
 </div>
 <section>
-    <!-- <mat-accordion class="example-headers-align"> -->
-        <!-- <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
+    <mat-accordion class="example-headers-align">
+        <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
             <mat-expansion-panel-header>
                 <mat-panel-title class="text2">count reports</mat-panel-title>
-            </mat-expansion-panel-header> -->
+            </mat-expansion-panel-header>
             <div class="cardContainer">
-                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(9)"><i
+                <div class="card royal-card tooltip-container" (click)="openBroadcasterDialog(6)"><i
                         class="fa-solid fa-network-wired"></i>
                     <div><strong>Channel Aging</strong> </div>
                     <div class="tooltip">CHANNEL AGING</div>
                 </div>
-                <div class="card royal-card tooltip-container" (click)="openHistoryDialog(10)"><i class="fas fa-tv"></i>
+                <div class="card royal-card tooltip-container" (click)="openBroadcasterDialog(7)"><i class="fas fa-tv"></i>
                     <div><strong>Package Aging </strong> </div>
                     <div class="tooltip">PACKAGE AGING</div>
                 </div>
             </div>
-        <!-- </mat-expansion-panel>
-    </mat-accordion> -->
+        </mat-expansion-panel>
+    </mat-accordion>
 </section>
