--- a/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
+++ b/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
@@ -18,7 +18,7 @@
                     <mat-checkbox [(ngModel)]="isCheckboxChecked" (change)="setCheckboxState($event.checked)" id="terms"> </mat-checkbox>
                 </div>
             </div>
-            <div class="input_box mb-3"  *ngIf="isCheckboxChecked">
+            <!-- <div class="input_box mb-3"  *ngIf="isCheckboxChecked">
                 <input type="text" placeholder="Search an CAS" formControlName="castypedisplay"
                     (input)="onSearchChange($event)" [(ngModel)]="castype"     
                     [value]="casname" [matAutocomplete]="auto"
@@ -33,8 +33,8 @@
                 <div *ngIf="form.get('castypedisplay')?.invalid && form.get('castypedisplay')?.touched">
                     <small class="text-danger">CAS is required.</small>
                 </div>
-            </div>
-            <mat-form-field appearance="outline" class="mx-2 mobileview">
+            </div> -->
+            <mat-form-field appearance="outline" class="mx-2 mobileview" *ngIf="isCheckboxChecked">
                 <mat-label>Select Package</mat-label>
                 <mat-select [(ngModel)]="package" [disabled]="!isCheckboxChecked" panelClass="custom-select-panel"
                     (closed)="onDropdownClosed()">
