--- a/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
+++ b/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
@@ -486,7 +486,7 @@
                 </div>
 
             </div>
-            <div class=" d-flex justify-content-end align-items-center mb-3" style="color: red;">
+            <div class=" d-flex justify-content-end align-items-center mb-3" [ngClass]="getStatusClass()">
                 {{display_status}}
             </div>
         </form>
