--- a/src/app/admin/features/channel_setting/Reports_page/Trai/History/history-all-reports/history-all-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/History/history-all-reports/history-all-reports.component.html
@@ -386,20 +386,24 @@
     </div>
 </div>
 <div *ngIf="allType== '9'">
-    <h3>Network Smartcard Status Count Report</h3>
-    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start mb-3">
         <button type="button" class="btn btn-primary" (click)="goBack()"><i
                 class="fa-solid fa-reply mx-2"></i>Back</button>
     </div>
-    <div class="row " style="padding: 1rem;">
-        <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-12 col-sm-8 mb-3 ">
-                <div class="col display justify-content-between align-items-end mb-3">
-                    <div class="display">
-                        <span class="finger">
-                            Select Date
-                        </span>
-                        <div class="mx-2 ">
+
+    <div class="col-sm-6 container d-block justify-content-center align-item-center">
+        <div class=" Head d-flex justify-content-center align-items-center mb-1">
+            <span class="span">Network Smartcard Status Count Report</span>
+        </div>
+        <div class="card  d-block justify-content-center align-items-center mb-3"
+            style="border: 1px solid #055478;padding: 1rem;">
+            <div class="col-12  display justify-content-center align-items-center">
+                <div class="col-12 col-md-12  justify-content-center align-items-center  ">
+                    <div class=" display mb-3">
+                        <div class=" input_box col-12 col-md-6">
+                            <label for="">Select Date</label>
+                        </div>
+                        <div class="col-12 col-md-6">
                             <mat-form-field class="input-field" appearance="outline">
                                 <mat-label>Choose a date</mat-label>
                                 <input matInput [matDatepicker]="picker" (dateChange)="logValues($event)"
@@ -408,75 +412,61 @@
                                 <mat-datepicker #picker></mat-datepicker>
                             </mat-form-field>
                         </div>
-                        <div class="allreport mb-2">
-                            <button class="btn btn-outline-info mx-1" mat-raised-button color="primary" type="button"
-                                (click)="getNetworkSmartcardStatusExcel()">
-                                Excel
-                            </button>
-                            <button class="btn btn-outline-info mx-1" mat-raised-button color="accent" type="button"
-                                (click)="getNetworkSmartcardStatusPDF()">
-                                PDF
-                            </button>
-                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-8 mb-3 ">
-                <!-- <div>
-                    <span> To Download Overall Network Count</span>
-                </div> -->
-                <div class=" mb-2">
-                    <span> To Download Overall Network Count</span>
-
-                    <div class="export-buttons d-flex">
-                        <div class="export-icon col-6 col-md-3 mx-2" (click)="getNetworkSmartcardStatusExcel()">
-                            <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
-                            <div class="tooltip">Excel</div>
+                    <div class=" input_box display1 mb-3">
+                        <div class="col-6 col-md-6">
+                            <span style="color: #243359; font-size: 15px;" for="">To Download Overall Network Count</span>
                         </div>
-                        <div class="export-icon col-6 col-md-3 mx-2" (click)="getNetworkSmartcardStatusPDF()">
-                            <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px">
-                            <div class="tooltip">Pdf</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-8 mb-3 ">
-                    <!-- <div>
-                        <span> To Download Operator Wise Network Count</span>
-                    </div> -->
-                    <div class=" mb-2">
-                        <span> To Download Operator Wise Network Count</span>
-
-                        <div class="export-buttons d-flex">
+                        <div class="col-6 col-md-6 display1">
                             <div class="export-icon col-6 col-md-3 mx-2" (click)="getNetworkSmartcardStatusExcel()">
                                 <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
                                 <div class="tooltip">Excel</div>
                             </div>
-                            <div class="export-icon col-6 col-md-3 mx-2" (click)="getNetworkSmartcardStatusPDF()">
+                            <div class="export-icon col-6 col-md-3" (click)="getNetworkSmartcardStatusPDF()">
                                 <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px">
                                 <div class="tooltip">Pdf</div>
                             </div>
                         </div>
                     </div>
+                    <div class="input_box display1 mb-3">
+                        <div class="col-6 col-md-6">
+                            <span style="color: #243359;font-size: 15px;" for="">To Download Operator Wise Network Count</span>
+                        </div>
+                        <div class="col-6 col-md-6 display1">
+                            <div class="export-icon col-6 col-md-3 mx-2" (click)="getNetworkSmartcardStatusExcel()">
+                                <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
+                                <div class="tooltip">Excel</div>
+                            </div>
+                            <div class="export-icon col-6 col-md-3" (click)="getNetworkSmartcardStatusPDF()">
+                                <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px">
+                                <div class="tooltip">Pdf</div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
 </div>
 <div *ngIf="allType== '10'">
-    <h3>Network Smartcard Active /Deactive Status Count Report</h3>
-    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start mb-3">
         <button type="button" class="btn btn-primary" (click)="goBack()"><i
                 class="fa-solid fa-reply mx-2"></i>Back</button>
     </div>
-    <div class="row " style="padding: 1rem;">
-        <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-12 col-sm-8 mb-3 total">
-                <div class="col display justify-content-between align-items-end mb-3">
-                    <div class="display">
-                        <span class="finger">
-                            Select Date
-                        </span>
-                        <div class="mx-2 ">
+    <div class="col-sm-4 container d-block justify-content-center align-item-center">
+        <div class=" Head d-flex justify-content-center align-items-center mb-1">
+            <span class="span">Network Smartcard Active /Deactive Status Count Report</span>
+        </div>
+        <div class="card  d-block justify-content-center align-items-center mb-3"
+            style="border: 1px solid #055478;padding: 1rem;">
+            <div class="col-12  display justify-content-center align-items-center">
+                <div class="col-12 col-md-12  justify-content-center align-items-center  ">
+                    <div class=" display mb-3">
+                        <div class=" input_box col-12 col-md-6">
+                            <label for="">Select Date</label>
+                        </div>
+                        <div class="col-12 col-md-6">
                             <mat-form-field class="input-field" appearance="outline">
                                 <mat-label>Choose a date</mat-label>
                                 <input matInput [matDatepicker]="picker" (dateChange)="logValues($event)"
@@ -485,15 +475,22 @@
                                 <mat-datepicker #picker></mat-datepicker>
                             </mat-form-field>
                         </div>
-                        <div class="allreport mb-2">
-                            <button class="btn btn-outline-info mx-1" mat-raised-button color="primary" type="button"
+                    </div>
+                    <div class=" input_box display1 mb-3">
+                        <div class="col-6 col-md-6">
+                            <span style="color: #243359;" for="">Get Reports</span>
+                        </div>
+                        <div class="col-6 col-md-6 display1">
+                            <div class="export-icon col-6 col-md-3 mx-2"
                                 (click)="getNetworkSmartcardActiveDeactiveStatusExcel()">
-                                Excel
-                            </button>
-                            <button class="btn btn-outline-info mx-1" mat-raised-button color="accent" type="button"
+                                <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
+                                <div class="tooltip">Excel</div>
+                            </div>
+                            <div class="export-icon col-6 col-md-3"
                                 (click)="getNetworkSmartcardActiveDeactiveStatusPDF()">
-                                PDF
-                            </button>
+                                <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px">
+                                <div class="tooltip">Pdf</div>
+                            </div>
                         </div>
                     </div>
                 </div>
