--- a/src/app/admin/features/channel_setting/Reports_page/Trai/History/history-all-reports/history-all-reports.component.scss
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/History/history-all-reports/history-all-reports.component.scss
@@ -1,3 +1,18 @@
+
+.Head {
+    background-color: var(--primary-color);
+    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.1);
+    color: white;
+    padding: 1rem;
+}
+
+.Head span {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
+
+
 .input_box input {
     width: 100%;
     height: 55px;
@@ -67,12 +82,26 @@ h5 {
     position: relative;
     top: 15px
 }
+label {
+    font-size: 17px;
+    font-weight: 600;
+}
 
+span {
+    font-size: 17px;
+    font-weight: 600;
+}
+.display1 {
+    display: flex;
+}
 @media screen and (max-width:790px) {
     .display {
         display: block;
     }
-
+    .display1 {
+        display: flex;
+        align-items: baseline;
+    }
     .allreport {
         position: relative;
         top: 2px;
