--- a/src/app/admin/features/channel_setting/Reports_page/Trai/broadcaster-reports/broadcaster-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/broadcaster-reports/broadcaster-reports.component.html
@@ -1,4 +1,8 @@
 <div *ngIf="allType == '1'">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn btn-primary" (click)="goBack()"><i
+                class="fa-solid fa-reply mx-2"></i>Back</button>
+    </div>
     <div class="container">
         <div class="col-md-12 Head d-flex justify-content-center align-items-center mb-3">
             <span class="span">Monthly Broadcaster Report</span>
@@ -140,14 +144,14 @@
     </div>
 </div>
 <div *ngIf="allType== '2'">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn btn-primary" (click)="goBack()"><i
+                class="fa-solid fa-reply mx-2"></i>Back</button>
+    </div>
     <div style="position: sticky;top: 6%;z-index: 1000;background-color: rgba(255, 255, 255, 0.8);padding: 1rem;">
         <h3>OVER ALL PRODUCT REPORT</h3>
     </div>
     <div class="row " style="padding: 1rem;">
-        <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
-            <button type="button" class="btn btn-primary" (click)="goBack()"><i
-                    class="fa-solid fa-reply mx-2"></i>Back</button>
-        </div>
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-12 col-sm-12 m-3">
                 <div class="col display justify-content-between align-items-end mb-3">
@@ -224,6 +228,10 @@
     </div>
 </div>
 <div *ngIf="allType == '3'">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn btn-primary" (click)="goBack()"><i
+                class="fa-solid fa-reply mx-2"></i>Back</button>
+    </div>
     <div class="container">
         <div class="col-md-12 Head d-flex justify-content-center align-items-center mb-3">
             <span class="span">Over All Base Product / Universal Count</span>
@@ -290,14 +298,14 @@
     </div>
 </div>
 <div *ngIf="allType== '4'">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn btn-primary" (click)="goBack()"><i
+                class="fa-solid fa-reply mx-2"></i>Back</button>
+    </div>
     <div style="position: sticky;top: 6%;z-index: 1000;background-color: rgba(255, 255, 255, 0.8);padding: 1rem;">
         <h3>OVER ALL BASE PRODUCT REPORT</h3>
     </div>
     <div class="row " style="padding: 1rem;">
-        <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
-            <button type="button" class="btn btn-primary" (click)="goBack()"><i
-                    class="fa-solid fa-reply mx-2"></i>Back</button>
-        </div>
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-12 col-sm-12 m-3">
                 <div class="col display justify-content-between align-items-end mb-3">
@@ -374,6 +382,10 @@
     </div>
 </div>
 <div *ngIf="allType == '5'">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn btn-primary" (click)="goBack()"><i
+                class="fa-solid fa-reply mx-2"></i>Back</button>
+    </div>
     <div class="container">
         <div class="col-md-12 Head d-flex justify-content-center align-items-center mb-3">
             <span class="span">Monthly Broadcaster Caswise Report</span>
@@ -481,6 +493,102 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div *ngIf="allType== '6'">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn btn-primary" (click)="goBack()"><i
+                class="fa-solid fa-reply mx-2"></i>Back</button>
+    </div>
+    <div style="position: sticky;top: 6%;z-index: 1000;background-color: rgba(255, 255, 255, 0.8);padding: 1rem;">
+        <h3>CHANNEL AGING REPORT</h3>
+    </div>
+    <div class="row " style="padding: 1rem;">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-12 col-sm-12 m-3">
+                <div class="col display justify-content-end align-items-end mb-3">
+                    <!-- <div class="col  mb-3"> -->
+                    <div class="d-flex">
+                        <div class="allreport mb-2">
+                            <a class="btn btn-success mx-1">
+                                Get Report
+                            </a>
+                        </div>
+                        <div class="input_box mx-2 ">
+                            <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
+                            <div class="tooltip">Excel</div>
+                        </div>
+                        <div class="input_box mx-2 mb-2">
+                            <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px">
+                            <div class="tooltip">Pdf</div>
+                        </div>
+                
+                    </div>
+                   
+                    <!-- </div> -->
+                </div>
+                <!-- <h5>OVER ALL PRODUCT REPORT</h5> -->
+                <div>
+                    <div class="tab">
+                        <span>CHANNEL AGING LIST </span>
+                    </div>
+                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                        rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
+                        (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
+                    </ag-grid-angular>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<div *ngIf="allType== '7'">
+    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+        <button type="button" class="btn btn-primary" (click)="goBack()"><i
+                class="fa-solid fa-reply mx-2"></i>Back</button>
+    </div>
+    <div style="position: sticky;top: 6%;z-index: 1000;background-color: rgba(255, 255, 255, 0.8);padding: 1rem;">
+        <h3>PACKAGE AGING REPORT</h3>
+    </div>
+    <div class="row " style="padding: 1rem;">
+
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-12 col-sm-12 m-3">
+                <div class="col display justify-content-end align-items-end mb-3">
+                    <!-- <div class="col  mb-3"> -->
+                    <div class="d-flex">
+                        <div class="allreport mb-2">
+                            <a class="btn btn-success mx-1">
+                                Get Report
+                            </a>
+                        </div>
+                        <div class="input_box mx-2 ">
+                            <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px">
+                            <div class="tooltip">Excel</div>
+                        </div>
+                        <div class="input_box mx-2 mb-2">
+                            <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px">
+                            <div class="tooltip">Pdf</div>
+                        </div>
+                
+                    </div>
+                   
+                    <!-- </div> -->
+                </div>
+                <!-- <h5>OVER ALL PRODUCT REPORT</h5> -->
+                <div>
+                    <div class="tab">
+                        <span>PACKAGE AGING lIST - </span>
+                    </div>
+                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                        rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
+                        (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
+                    </ag-grid-angular>
+                </div>
+
             </div>
         </div>
     </div>
