--- a/src/app/admin/features/channel_setting/_Dialogue/BULK OPERATION/bulkpackageupdation/bulkpackageupdation.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/BULK OPERATION/bulkpackageupdation/bulkpackageupdation.component.html
@@ -143,7 +143,7 @@
         </div>
         <div class=" col-12 col-sm-6  mb-3 mobile2" style="padding: 1rem;">
             <div class="card d-flex justify-content-center align-item-center mb-3 ">
-                <div class="checkbox-text mb-3" style="margin-top: 2%;">
+                <!-- <div class="checkbox-text mb-3" style="margin-top: 2%;">
                     <div class="checkbox-content">
                         <input type="checkbox" id="terms" (change)="onCheckboxPackageChange($event)">
                         <label for="confirmPass" style="color: orangered;">Click to Subscription Update With New
@@ -173,9 +173,7 @@
                         <div class="col-12 col-md-4">
                             <span for="">Package Name </span>
                         </div>
-                        <!-- <div class="dis">
-                            <span for="">: </span>
-                        </div> -->
+              
                         <div class=" col-12 col-md-5">
                             <input type="text" matInput [matAutocomplete]="auto" [(ngModel)]="packageid"
                                 (input)="filterPackage($event)" placeholder="Select a package"
@@ -190,7 +188,7 @@
                             </mat-autocomplete>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="checkbox-text mb-3 ">
                     <div class="checkbox-content">
                         <input type="checkbox" id="terms" [(ngModel)]="isallpack">
@@ -199,7 +197,7 @@
                             Addon/Alacarte</label>
                     </div>
                 </div> -->
-                <div class="input_box  mb-3">
+                <div class="input_box  mb-3" style="margin-top: 2%;">
                     <div class="col-12 col-md-10 display align-items-center justify-content-center ">
                         <div class="col-12 col-md-4">
                             <span for="">Plan </span>
