--- a/src/app/admin/features/channel_setting/_Dialogue/operator/special-permission/special-permission.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/special-permission/special-permission.component.html
@@ -161,8 +161,8 @@
             </div>
         </div>
         <div class="d-flex justify-content-center align-item-center mx-3 mb-4">
-            <button type="button" class="btn btn-danger me-2" (click)="togglepermission()">Cancel</button>
-            <button type="button" (click)="onSubmit()" class="btn btn-success">Update</button>
+            <button type="button" (click)="onSubmit()" class="btn btn-success me-2">Update</button>
+            <button type="button" class="btn btn-danger " (click)="togglepermission()">Cancel</button>
         </div>
     </div>
     <!-- </form> -->
