--- a/src/app/admin/features/operator/operator-details/operator-details.component.scss
+++ b/src/app/admin/features/operator/operator-details/operator-details.component.scss
@@ -1,16 +1,15 @@
-.container {
-    display: flex;
-    height: 5vh;
-    gap: 20px;
-    // margin: 15px 15px;
-    // margin: 0;
+// .container {
+//     display: flex;
+//     height: 5vh;
+//     gap: 20px;
+//     // margin: 15px 15px;
+//     // margin: 0;
 
-}
+// }
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-    /* Adjust column size */
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
     gap: 10px;
 }
 
@@ -29,7 +28,7 @@
 .card {
     height: 100%;
     width: 100%;
-    max-width: 400px;
+    max-width: 600px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
@@ -182,21 +181,23 @@ span {
 // }
 .child-card {
     // gap: 8px;
-    gap: 25px;
+    gap: 45px;
     background: #8f9b8f;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
     padding: 10px;
-    width: 100%;
+    width: auto;
+    // height: 25%;
     justify-content: center;
     display: flex;
     align-items: center;
 
     .col-2 {
-        height: 40px;
-        width: 53px;
+        // height: 40px;
+        // width: 53px;
+        width: auto;
         justify-content: center;
-        display: flex;
+        display: block;
         align-items: center;
     }
 }
@@ -270,7 +271,8 @@ span {
 }
 
 .sub-text {
-    color: var(--primary-color);
+    // color: var(--primary-color);
+    color: #012423;
 }
 
 @media screen and (max-width:760px) {
@@ -285,6 +287,9 @@ span {
 
     .display {
         display: block;
+    }
+    .grid-container {
+        grid-template-columns: 1fr; 
     }
 }
 
