--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -110,16 +110,16 @@
                     </div>
                     <div class="tooltip">AS ON DATE ACTIVE/DEACTIVE (ALL TYPES OF PRODUCTS) </div>
                 </div>
-                <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('Synchronization')"><i
+                <!-- <div class="card royal-card tooltip-container" (click)="openPackageBaseDialogue('Synchronization')"><i
                         class="fas fa-file-alt"></i>
                     <div><strong>Synchronization Report</strong> </div>
                     <div class="tooltip">SYNCHRONIZATION</div>
-                </div>
+                </div> -->
             </div>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- -------------------------------Broadcaster Reports----------------------------------- -->
+<!-- -------------------------------Broadcaster Reports-----------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -155,7 +155,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- --------------------------------History Reports-------------------------------------------------------- -->
+--------------------------------History Reports--------------------------------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -186,7 +186,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- --------------------------------Suspend reports----------------------------------------------------------- -->
+--------------------------------Suspend reports-----------------------------------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -212,7 +212,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- -------------------------------CAS operation reports (Historical Reports)----------------------------------------------------- -->
+-------------------------------CAS operation reports (Historical Reports)-----------------------------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -244,7 +244,7 @@
     </mat-accordion>
 </section>
 
-<!-- --------------------------------count reports---------------------------------------------------------- -->
+--------------------------------count reports----------------------------------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -265,7 +265,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- --------------------------------count reports---------------------------------------------------------- -->
+--------------------------------count reports----------------------------------------------------------
 <div style="background-color: rgba(109, 107, 107, 0.8);padding: 1rem;">
     <h3 style="color: rgb(255, 255, 255);">COUNT REPORTS</h3>
 </div>
@@ -277,15 +277,15 @@
             </mat-expansion-panel-header>
             <div class="cardContainer">
                 <div class="card royal-card tooltip-container" (click)="openBroadcasterDialog(6)"><i
-                        class="fa-solid fa-network-wired"></i>
+                        class="fa fa-list"></i>
                     <div><strong>Channel Aging</strong> </div>
                     <div class="tooltip">CHANNEL AGING</div>
                 </div>
-                <div class="card royal-card tooltip-container" (click)="openBroadcasterDialog(7)"><i class="fas fa-tv"></i>
+                <div class="card royal-card tooltip-container" (click)="openBroadcasterDialog(7)"><i class="fa-solid fa-briefcase"></i>
                     <div><strong>Package Aging </strong> </div>
                     <div class="tooltip">PACKAGE AGING</div>
                 </div>
             </div>
         </mat-expansion-panel>
     </mat-accordion>
-</section>
+</section> -->
