--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -241,8 +241,8 @@
                             class='bx bx-sm bxs-user-pin icon'></i> &nbsp; MSO Details</a></li>
                 <li><a (click)="navgetToUrl('/casmaster');setActiveLinkTab($event)"><i
                             class='bx bx-sm bx-user-circle icon'></i> &nbsp;CAS Master</a></li>
-                <li><a (click)="navgetToUrl('/tax');setActiveLinkTab($event)"><i
-                            class='bx bx-sm bxs-wrench icon'></i> &nbsp;TAX Master</a>
+                <li><a (click)="navgetToUrl('/tax');setActiveLinkTab($event)"><i class='bx bx-sm bxs-wrench icon'></i>
+                        &nbsp;TAX Master</a>
                 </li>
                 <li><a (click)="navgetToUrl('/invoice');setActiveLinkTab($event)"><i
                             class='bx bx-sm bxs-calculator icon'></i> &nbsp;Billing</a>
@@ -256,7 +256,7 @@
             </ul>
         </li>
 
-<!-- 
+        <!-- 
         <li *ngIf="isSpecial "><a (click)="navgetToUrl('/msodetails');setActiveTab($event)" class="active">
                 <i class='bx bx-sm bxs-dashboard icon'></i>
                 <i class='bx bx-sm bxs-user-pin icon'></i>
