--- a/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
+++ b/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
@@ -7,7 +7,7 @@
     <div class="col-12 col-md-6">
         <div class="card">
             <div class=" display_1  mb-2">
-                <div class="col-12 col-md-4">
+                <div class="input_box col-12 col-md-4">
                     <span for="">Date</span>
                 </div>
                 <div class="col-12 col-md-8">
@@ -23,7 +23,7 @@
             </div>
 
             <div class=" display_1  mb-3">
-                <div class="col-12 col-md-4">
+                <div class="input_box col-12 col-md-4">
                     <span for="">Operator</span>
                 </div>
                 <div class=" custom-select  operator_width  mb-2 mx-2">
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="   display_1 justify-content-between align-item-center">
-                <div class="col-12 col-md-4">
+                <div class="input_box col-12 col-md-4">
                     <span for="">Format</span>
                 </div>
                 <div class="col-12 col-md-8 d-flex justify-content-start align-items-center">
