--- a/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/lco-recharge-report/lco-recharge-report.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/lco-recharge-report/lco-recharge-report.component.html
@@ -59,12 +59,12 @@
         </div>
         <div class="d-flex col-12 col-md-2 d-flex  justify-content-center align-items-center ">
             <div class="col-12 col-md-3 d-flex justify-content-start align-items-center mb-3">
-                <div class="icon-container d-flex align-items-center">
+                <div class="icon-container d-flex align-items-center" style="cursor: pointer;" (click)="getRechargeExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
                 &nbsp;&nbsp;
-                <div class="icon-container d-flex align-items-center">
+                <div class="icon-container d-flex align-items-center" style="cursor: pointer;" (click)="getRechargePDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
@@ -153,7 +153,7 @@
 
         <div class="col-12 col-md-4 d-flex justify-content-end align-items-center mb-3">
             <div class="d-flex justify-content-center align-items-center">
-                <div class="icon-container d-flex align-items-center mx-2">
+                <div class="icon-container d-flex align-items-center mx-2" style="cursor: pointer;" (click)="getLCORechargeExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
