--- a/src/app/admin/features/channel_setting/_Dialogue/operator/operatordialogue/operatordialogue.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/operatordialogue/operatordialogue.component.html
@@ -1,22 +1,25 @@
-<div *ngIf="OType=='area'"
-    class="col d-flex justify-content-center align-items-center card transparent-background dialog-content">
+<div *ngIf="OType=='area'">
+    <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+        <h6>NEW AREA DETAILS</h6>
+        <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+    </div>
     <div class="card-content">
-        <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
-            <h6>NEW AREA DETAILS</h6>
-            <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
-        </div>
         <div style="padding: 1rem;">
             <div class="input_box display align-items-center mb-3">
                 <div class="col-12 col-md-6">
                     <span for="areaname" class="me-2">AREA NAME</span>
                 </div>
                 <div class="col-12 col-md-6">
-                    <input type="text" [(ngModel)]="areaname" #areaName="ngModel" required minlength="3" maxlength="50">
-                    <div *ngIf="areaName.invalid && areaName.touched" class="text-danger">
+                    <input type="text" [(ngModel)]="areaname" #areaName="ngModel" placeholder="Enter a Area" required
+                        minlength="3" maxlength="50">
+                    <div *ngIf="submitted && !areaname" class="text-danger" style="font-size: small;">
+                        Area Name is required.
+                    </div>
+                    <!-- <div *ngIf="areaName.invalid && areaName.touched" class="text-danger">
                         <small *ngIf="areaName.errors?.['required']">Area Name is required.</small>
                         <small *ngIf="areaName.errors?.['minlength']">Area Name should be at least 3 characters
                             long.</small>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="input_box display align-items-center mb-3">
@@ -24,12 +27,15 @@
                     <span for="pincode" class="me-2">PINCODE</span>
                 </div>
                 <div class="col-12 col-md-6">
-                    <input type="text" [(ngModel)]="pincode" #pinCode="ngModel" required pattern="^[0-9]{6}$"
-                        maxlength="6" (keypress)="onKeydown($event)">
-                    <div *ngIf="pinCode.invalid && pinCode.touched" class="text-danger">
+                    <input type="text" [(ngModel)]="pincode" #pinCode="ngModel" placeholder="Enter a pincode" required
+                        pattern="^[0-9]{6}$" maxlength="6" (keypress)="onKeydown($event)">
+                    <div *ngIf="submitted && !pincode" class="text-danger" style="font-size: small;">
+                        Pincode is required.
+                    </div>
+                    <!-- <div *ngIf="pinCode.invalid && pinCode.touched" class="text-danger">
                         <small *ngIf="pinCode.errors?.['required']">Pincode is required.</small>
                         <small *ngIf="pinCode.errors?.['pattern']">Pincode should be 6 digits long.</small>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="form-group d-flex justify-content-end align-items-center mb-3">
@@ -214,18 +220,20 @@
                 <span class="formlabel">Click You Need Report Format - >
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getExcel()">
-                    <img src="/assets/images/icons/Excel.png" width="40px">
-                    <div class="tooltip">Excel</div>
+            <div class="d-flex">
+                <div class="col-4 col-md-2 mx-3 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getExcel()">
+                        <img src="/assets/images/icons/Excel.png" width="40px">
+                        <div class="tooltip">Excel</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getPDF()">
-                    <img src="/assets/images/icons/pdf.png" width="40px">
-                    <div class="tooltip">Pdf</div>
+                <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getPDF()">
+                        <img src="/assets/images/icons/pdf.png" width="40px">
+                        <div class="tooltip">Pdf</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -243,18 +251,20 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getExcel()">
-                    <img src="/assets/images/icons/Excel.png" width="40px">
-                    <div class="tooltip">Excel</div>
+            <div class="d-flex">
+                <div class="col-4 col-md-2 mx-3 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getExcel()">
+                        <img src="/assets/images/icons/Excel.png" width="40px">
+                        <div class="tooltip">Excel</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getPDF()">
-                    <img src="/assets/images/icons/pdf.png" width="40px">
-                    <div class="tooltip">Pdf</div>
+                <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getPDF()">
+                        <img src="/assets/images/icons/pdf.png" width="40px">
+                        <div class="tooltip">Pdf</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -272,18 +282,20 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getExcel()">
-                    <img src="/assets/images/icons/Excel.png" width="40px">
-                    <div class="tooltip">Excel</div>
+            <div class="d-flex">
+                <div class="col-4 col-md-2 mx-3 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getExcel()">
+                        <img src="/assets/images/icons/Excel.png" width="40px">
+                        <div class="tooltip">Excel</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getPDF()">
-                    <img src="/assets/images/icons/pdf.png" width="40px">
-                    <div class="tooltip">Pdf</div>
+                <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getPDF()">
+                        <img src="/assets/images/icons/pdf.png" width="40px">
+                        <div class="tooltip">Pdf</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -301,18 +313,20 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getExcel()">
-                    <img src="/assets/images/icons/Excel.png" width="40px">
-                    <div class="tooltip">Excel</div>
+            <div class="d-flex">
+                <div class="col-4 col-md-2 mx-3 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getExcel()">
+                        <img src="/assets/images/icons/Excel.png" width="40px">
+                        <div class="tooltip">Excel</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getPDF()">
-                    <img src="/assets/images/icons/pdf.png" width="40px">
-                    <div class="tooltip">Pdf</div>
+                <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getPDF()">
+                        <img src="/assets/images/icons/pdf.png" width="40px">
+                        <div class="tooltip">Pdf</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -331,18 +345,20 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getExcel()">
-                    <img src="/assets/images/icons/Excel.png" width="40px">
-                    <div class="tooltip">Excel</div>
+            <div class="d-flex">
+                <div class="col-4 col-md-2 mx-3 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getExcel()">
+                        <img src="/assets/images/icons/Excel.png" width="40px">
+                        <div class="tooltip">Excel</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getPDF()">
-                    <img src="/assets/images/icons/pdf.png" width="40px">
-                    <div class="tooltip">Pdf</div>
+                <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getPDF()">
+                        <img src="/assets/images/icons/pdf.png" width="40px">
+                        <div class="tooltip">Pdf</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -361,18 +377,21 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getExcel()">
-                    <img src="/assets/images/icons/Excel.png" width="40px">
-                    <div class="tooltip">Excel</div>
+            <div class="d-flex">
+                <div class="col-4 col-md-2 mx-3 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+
+                    <div class="icon-container" (click)="getExcel()">
+                        <img src="/assets/images/icons/Excel.png" width="40px">
+                        <div class="tooltip">Excel</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getPDF()">
-                    <img src="/assets/images/icons/pdf.png" width="40px">
-                    <div class="tooltip">Pdf</div>
+                <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getPDF()">
+                        <img src="/assets/images/icons/pdf.png" width="40px">
+                        <div class="tooltip">Pdf</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -391,18 +410,20 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getExcel()">
-                    <img src="/assets/images/icons/Excel.png" width="40px">
-                    <div class="tooltip">Excel</div>
+            <div class="d-flex">
+                <div class="col-4 col-md-2 mx-3 d-flex justify-content-center align-items-center tooltip-container"
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getExcel()">
+                        <img src="/assets/images/icons/Excel.png" width="40px">
+                        <div class="tooltip">Excel</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
-                style="cursor: pointer;">
-                <div class="icon-container" (click)="getPDF()">
-                    <img src="/assets/images/icons/pdf.png" width="40px">
-                    <div class="tooltip">Pdf</div>
+                <div class="col-4 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                    style="cursor: pointer;">
+                    <div class="icon-container" (click)="getPDF()">
+                        <img src="/assets/images/icons/pdf.png" width="40px">
+                        <div class="tooltip">Pdf</div>
+                    </div>
                 </div>
             </div>
         </div>
