--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.scss
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.scss
@@ -34,9 +34,9 @@ label {
 
 .text2 {
   padding: 0.5rem;
-  font-size: 17px;
-  color: #202c2c;
-  font-weight: 700;
+  font-size: 16px;
+  color: #000957;
+  // font-weight: 700;
 }
 
 .icon-item {
